Turn off Esc sequence wait time.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,3 +20,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # | and - to split window
 bind \ split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
+
+# Don't wait for an escape sequence after hitting
+# Esc. Fixes insert mode exit lag in vim
+set -sg escape-time 0
