--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,3 +24,6 @@ bind - split-window -vc "#{pane_current_path}"
 # Don't wait for an escape sequence after hitting
 # Esc. Fixes insert mode exit lag in vim
 set -sg escape-time 0
+
+set-option -g pane-border-fg brightblack
+set-option -g pane-active-border-fg green
