Quickly move windows.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,5 +25,9 @@ bind - split-window -vc "#{pane_current_path}"
 # Esc. Fixes insert mode exit lag in vim
 set -sg escape-time 0
 
+# Quickly move windows
+bind -r C-Left  swap-window -t -1
+bind -r C-Right swap-window -t +1
+
 set-option -g pane-border-fg brightblack
 set-option -g pane-active-border-fg green
