--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,3 +31,30 @@ bind -r C-Right swap-window -t +1
 
 set-option -g pane-border-fg brightblack
 set-option -g pane-active-border-fg green
+
+# Status bar settings
+set-option -g status on
+set -g status-utf8 on
+set -g status-interval 5
+set -g status-justify left
+# Show changes in other windows
+setw -g monitor-activity off
+set -g visual-activity off
+# Status bar colors
+set-option -g status-bg colour235
+set-option -g status-fg white
+set-option -g status-attr dim
+set-window-option -g window-status-bg colour235
+set-window-option -g window-status-fg white
+set-window-option -g window-status-attr dim
+set-window-option -g window-status-current-bg colour236
+set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-attr bright
+set -g message-fg black
+set -g message-bg white
+# Pad the window list
+set -g status-left-length 1
+set -g status-left " "
+# Status bar right -- client-name : external-ip : internal-ip
+set -g status-right "#[fg=green]#h#[fg=brightblue] : #(curl icanhazip.com) : #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print $2}')  "
+set -g status-right-length 50
