Use Tmux Resurrect.
tmux.conf should end with its init.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,3 +58,10 @@ set -g status-left " "
 # Status bar right -- client-name : external-ip : internal-ip
 set -g status-right "#[fg=green]#h#[fg=brightblue] : #(curl icanhazip.com) : #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print $2}')  "
 set -g status-right-length 50
+
+
+
+
+
+# Initialize Tmux Resurrect
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
