Update package control ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ fishd*
 
 Package Control.cache/
 Package Control.last-run
-Package Control.system-ca-bundle
+Package Control.*-ca-bundle
 
 configstore/
 
