--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,7 +17,10 @@
 	autosquash = true
 [rerere]
 	enabled = 1
-
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
 
 [alias]
 	c = checkout
