Remove tmux righthand side

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,8 +56,8 @@ set -g message-bg white
 set -g status-left-length 1
 set -g status-left " "
 # Status bar right -- client-name : external-ip : internal-ip
-set -g status-right "#[fg=green]#h#[fg=brightblue] : #(curl icanhazip.com) : #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print $2}')  "
-set -g status-right-length 50
+set -g status-right ""
+set -g status-right-length 0
 
 
 
