Add tmux package manager and resurrect/continuum

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,13 +55,12 @@ set -g message-bg white
 # Pad the window list
 set -g status-left-length 1
 set -g status-left " "
-# Status bar right -- client-name : external-ip : internal-ip
-set -g status-right ""
-set -g status-right-length 0
+set -g status-right-length 50
+set -g status-right 'continuum: #{continuum_status}'
 
+# Initialize plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
-
-
-
-# Initialize Tmux Resurrect
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run '~/.tmux/plugins/tpm/tpm'
