Highlight diffs by character

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,9 +18,9 @@
 [rerere]
 	enabled = 1
 [pager]
-	log = diff-highlight | less
-	show = diff-highlight | less
-	diff = diff-highlight | less
+	log = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
+	show = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
+	diff = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
 
 [alias]
 	c = checkout
