Don't ignore case in git

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,6 +6,7 @@
 [core]
 	editor = subl -ws
 	excludesfile = ~/.config/git/.gitignore_global
+	ignorecase = false
 [push]
 	default = current
 [branch]
