Tmux copy/pasting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,10 @@ bind C-t send-prefix
 set-option -g base-index 1
 setw -g pane-base-index 1
 
+# Vim style highlight and copy
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
