Git pull production before merging master

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -57,7 +57,7 @@
 	arc = !git au && git rc
 
 	up = !git fetch && git checkout master && git pull && git checkout -
-	release = !git up && git checkout production && git merge master
+	release = !git up && git checkout production && git pull && git merge master
 
 	pu = push -u
 
