--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -64,7 +64,7 @@
 	pr = !hub pull-request
 
 	undo = reset HEAD^
-	wip = !git add . && git commit -m WIP
+	wip = !git add . && git commit -m 'WIP [ci skip]'
 
 	open = !subl $(git status --short | awk '$1 ~ /^[^ ]/ {print $2}')
 	conflicts = !subl $(git status --short | awk '$1 ~ /^[AUD][AUD]/ {print $2}')
