--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -52,7 +52,7 @@
 
 set blame-view	= date:relative author:email-user,width=7 file-name:auto id:yes,color line-number:no,interval=5 text
 set grep-view	= file-name:no line-number:yes,interval=1 text
-set main-view	= line-number:no,interval=5 id:no date:relative author:email-user,width=7 commit-title:yes,graph,refs,overflow=no
+set main-view	= line-number:no,interval=5 id:no date:relative-compact,format=%h %d author:email-user,width=4 commit-title:yes,graph,refs,overflow=no
 set refs-view	= date:relative author:email-user,width=7 ref commit-title
 set stash-view	= line-number:no,interval=5 id:no date:relative author:email-user,width=7 commit-title
 set status-view	= line-number:no,interval=5 status:short file-name
