--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,9 @@
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 
 set -g default-terminal "screen-256color"
 
-set-option -g default-command "reattach-to-user-namespace -l fish"
+# set-option -g default-command "reattach-to-user-namespace -l fish"
 
 # Make C-t the prefix
 unbind C-b
@@ -15,8 +15,8 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 
 # Vim style highlight and copy
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -33,34 +33,29 @@ set -sg escape-time 0
 bind -r C-Left  swap-window -t -1
 bind -r C-Right swap-window -t +1
 
-set-option -g pane-border-fg brightblack
-set-option -g pane-active-border-fg green
+set-option -g pane-border-style fg=brightblack
+set-option -g pane-active-border-style fg=green
 
 # Status bar settings
 set-option -g status on
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-interval 5
 set -g status-justify left
 # Show changes in other windows
 setw -g monitor-activity off
 set -g visual-activity off
 # Status bar colors
-set-option -g status-bg colour235
-set-option -g status-fg white
-set-option -g status-attr dim
-set-window-option -g window-status-bg colour235
-set-window-option -g window-status-fg white
-set-window-option -g window-status-attr dim
-set-window-option -g window-status-current-bg colour236
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-attr bright
-set -g message-fg black
-set -g message-bg white
+set-option -g status-style bg=colour235,fg=white,dim
+set-window-option -g window-status-style bg=colour235,fg=white,dim
+set-window-option -g window-status-current-style bg=colour236,fg=green,bright
+set -g message-style fg=black,bg=white
 # Pad the window list
 set -g status-left-length 1
 set -g status-left " "
 set -g status-right-length 50
-set -g status-right 'continuum: #{continuum_status}'
+set -g status-right ''
+# set -g status-right 'continuum: #{continuum_status}'
+# set -g status-right "#(/usr/local/bin/prettyping google.com)"
 
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
