--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,9 +22,9 @@
 [rerere]
 	enabled = 1
 [pager]
-	log = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
-	show = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
-	diff = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
+	log  = $(brew --prefix git)/share/git-core/contrib/diff-highlight/diff-highlight | less
+	show = $(brew --prefix git)/share/git-core/contrib/diff-highlight/diff-highlight | less
+	diff = $(brew --prefix git)/share/git-core/contrib/diff-highlight/diff-highlight | less
 
 [alias]
 	c = checkout
