--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,7 +22,7 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # | and - to split window
-bind \ split-window -hc "#{pane_current_path}"
+bind \\ split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
 # Don't wait for an escape sequence after hitting
