Update tmux settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,9 @@
 # set -g utf8
 # set-window-option -g utf8 on
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
-# set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-command "reattach-to-user-namespace -l fish"
 
 # Make C-t the prefix
 unbind C-b
@@ -28,6 +28,9 @@ bind - split-window -vc "#{pane_current_path}"
 # Don't wait for an escape sequence after hitting
 # Esc. Fixes insert mode exit lag in vim
 set -sg escape-time 0
+
+# Allow scrolling with the mouse
+setw -g mouse on
 
 # Quickly move windows
 bind -r C-Left  swap-window -t -1
