Update tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,29 +36,45 @@ setw -g mouse on
 bind -r C-Left  swap-window -t -1
 bind -r C-Right swap-window -t +1
 
-set-option -g pane-border-style fg=brightblack
-set-option -g pane-active-border-style fg=green
+# set-option -g pane-active-border-fg brightblack
+# set-option -g pane-active-border-fg green
 
 # Status bar settings
-set-option -g status on
-# set -g status-utf8 on
-set -g status-interval 5
-set -g status-justify left
-# Show changes in other windows
-setw -g monitor-activity off
+
+# loud or quiet?
 set -g visual-activity off
-# Status bar colors
-set-option -g status-style bg=colour235,fg=white,dim
-set-window-option -g window-status-style bg=colour235,fg=white,dim
-set-window-option -g window-status-current-style bg=colour236,fg=green,bright
-set -g message-style fg=black,bg=white
-# Pad the window list
-set -g status-left-length 1
-set -g status-left " "
-set -g status-right-length 50
-set -g status-right ''
-# set -g status-right 'continuum: #{continuum_status}'
-# set -g status-right "#(/usr/local/bin/prettyping google.com)"
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+#  modes
+# setw -g mode-style 'fg=colour3 bg=colour15 bold'
+
+# panes
+set -g pane-border-style 'fg=colour240'
+set -g pane-active-border-style 'fg=white'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour235 fg=white dim'
+set -g status-left ' '
+set -g status-left-length 80
+
+setw -g window-status-current-style 'fg=red bg=colour236 bright'
+setw -g window-status-current-format ' #[fg=magenta]#I:#[fg=white]#W#[fg=magenta]#F '
+
+setw -g window-status-style 'fg=white bg=colour235 dim'
+setw -g window-status-format ' #[fg=magenta]#I:#[fg=colour250]#W#[fg=magenta]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour3 bold'
+
+set -g status-right '#(gitmux "#{pane_current_path}")'
+set -g status-right-length 80
+
+# messages
+set -g message-style 'fg=black bg=white'
 
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
