Update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,8 +33,11 @@ set -sg escape-time 0
 setw -g mouse on
 
 # Quickly move windows
-bind -r C-Left  swap-window -t -1
-bind -r C-Right swap-window -t +1
+bind -r C-[  swap-window -t -1
+bind -r C-] swap-window -t +1
+
+# Bump default history limit (2000) be a bunch
+set-option -g history-limit 50000
 
 # set-option -g pane-active-border-fg brightblack
 # set-option -g pane-active-border-fg green
