--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind \\ split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
+# Join current pane with previous window
+bind-key j "join-pane -s !"
+
 # Don't wait for an escape sequence after hitting
 # Esc. Fixes insert mode exit lag in vim
 set -sg escape-time 0
